--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width", initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="styles.css">
         <script src="js/js.js"></script>
         <title>WDD 230-06 Assignment Portal</title>
         <meta name="description" content="Assignment portal for WDD 230-06">
