--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </main>
         <footer>
             <div class="info-block">
-                <p>&copy; <span id="currYear"></span> | Laura Sommer | Utah | <a
+                <p>&copy; 2020 | Laura Sommer | Utah | <a
                     href="https://www.byui.edu/online">BYUI Online Learning</a></br>
                     <span id="lastUpdated" class="lastUpdated"></span>
                 </p>
