--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         </main>
         <footer>
             <div class="info-block">
-                <p>&copy; <span id="currYear"></span> | Laura Sommer | Utah | <a
-                    href="https://www.byui.edu/online">BYUI Online Learning</a></br>
-                    <span id="lastUpdated" class="lastUpdated"></span>
+                <p>&copy; <span id="currYear"></span> | Laura Sommer | Utah | <a href="https://www.byui.edu/online" target="_blank"></a>BYUI Online Learning</a>
+                    <br><span id="lastUpdated" class="lastUpdated"></span>
                 </p>
             </div>
         </footer>
