--- a/index.html
+++ b/index.html
@@ -2,38 +2,35 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width", initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <script src="js/js.js"></script>
+        <meta name="viewport" content="width=device-width", initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
         <title>WDD 230-06 Assignment Portal</title>
         <meta name="description" content="Assignment portal for WDD 230-06">
     </head>
     <body>
         <header>
-            <div class="student portal">
+            <div class="studentPortal">
                 <img src="Screen Shot 2018-12-20 at 1.39.21 PM.jpg" alt="student_pic" class="studentPic">
                 <h1>Laura Sommer</h1>
                 </div>
         </header>
         <main>
+                <h2>WDD 230-06: Assignment Portal</h2>
+                <hr>
             <div>
-                <h2 class="title">WDD 230-06: Assignment Portal</h2>
-                <hr class="title">
-            </div>
-            <div>
-                <ul class="lessons">
+                <nav class="lessons">
+                <ul>
                     <li>Lesson 02: <a href="">Assignment Link</a></li>
                     <li>Lesson 03: <a href="">Assignment Link</a></li>
                     <li>Lesson 04: <a href="">Link</a> | <a href="">Link</a></li>
                 </ul>
-            </div>
-        </main>
+            </nav>
         <footer>
-            <div class="info-block">
-                <p>&copy; <span id="currYear"></span> | Laura Sommer | Utah | <a href="https://www.byui.edu/online" target="_blank"></a>BYUI Online Learning</a>
-                    <br><span id="lastUpdated" class="lastUpdated"></span>
-                </p>
-            </div>
+            <span>
+                class="dateModified"> Last Updated:
+                <script src="js/modified.js" type="text/javascript"></script>
+            </span>
         </footer>
+    </main>
     </body>
 </html>
