--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <footer>
             <span>
                 class="dateModified"> Last Updated:
-                <script src="js/modified.js" type="text/javascript"></script>
+                <script src="js/file.js" type="text/javascript"></script>
             </span>
         </footer>
     </main>
