--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
         <footer>
-            <span>
+            <span
                 class="dateModified"> Last Updated:
                 <script src="js/file.js" type="text/javascript"></script>
             </span>
