--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 </ul>
             </nav>
         <footer>
-            <span
-                class="dateModified"> Last Updated:
+            <span class="dateModified" Last Updated:
                 <script src="js/file.js" type="text/javascript"></script>
             </span>
         </footer>
