--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
                 </ul>
             </nav>
         <footer>
-            <span class="dateModified" Last Updated:
+            <span>
+                &copy;2020 | Laura Sommer | Logan, Utah | <a
+                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+            </span>
+            <br>
+            <br>
+            <span class="dateModified"><strong>Last Updated:</strong>
                 <script src="js/file.js" type="text/javascript"></script>
             </span>
         </footer>
     </main>
-    </body>
+</body>
+
 </html>
