--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width", initial-scale=1.0">
+        <meta name="viewport" content="width=device-width" initial-scale=1>
         <link rel="stylesheet" href="css/styles.css">
         <title>WDD 230-06 Assignment Portal</title>
         <meta name="description" content="Assignment portal for WDD 230-06">
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="studentPortal">
-                <img src="Screen Shot 2018-12-20 at 1.39.21 PM.jpg" alt="student_pic" class="studentPic">
+                <img src="profile.pic.jpg" alt="student_pic" class="studentPic">
                 <h1>Laura Sommer</h1>
                 </div>
         </header>
