--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </span>
             <br>
             <br>
-            <span class="dateModified"><strong>Last Updated:</strong>
+            <span class="dateModified"> Last Updated:
                 <script src="js/file.js" type="text/javascript"></script>
             </span>
         </footer>
