--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width" initial-scale=1>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="styles.css">
         <title>WDD 230-06 Assignment Portal</title>
-        <meta name="description" content="Assignment portal for WDD 230-06">
+        <meta name="description" content="Assignment portal for WDD 230-06"/>
     </head>
     <body>
         <header>
@@ -17,7 +17,6 @@
         <main>
                 <h2>WDD 230-06: Assignment Portal</h2>
                 <hr>
-            <div>
                 <nav class="lessons">
                 <ul>
                     <li>Lesson 02: <a href="">Assignment Link</a></li>
