--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <hr>
                 <nav class="lessons">
                 <ul>
-                    <li>Lesson 02: <a href="">Assignment Link</a></li>
-                    <li>Lesson 03: <a href="">Assignment Link</a></li>
-                    <li>Lesson 04: <a href="">Link</a> | <a href="">Link</a></li>
+                    <li><strong>Lesson 02:</strong> <a href="">Assignment Link</a></li>
+                    <li><strong>Lesson 03:</strong> <a href="">Assignment Link</a></li>
+                    <li><strong>Lesson 04:</strong> <a href=""><strong>Link</strong></a> | <a href=""><strong>Link</strong></a></li>
                 </ul>
             </nav>
         <footer>
