--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <br>
             <br>
             <span class="dateModified"> Last Updated:
-                <script src="js/file.js" type="text/javascript"></script>
+                <script src="file.js" type="text/javascript"></script>
             </span>
         </footer>
     </main>
