--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <main>
                 <h2>WDD 230-06: Assignment Portal</h2>
                 <hr>
+                <div>
                 <nav class="lessons">
                 <ul>
                     <li><strong>Lesson 02: </strong> <a href="#">Assignment Link</a></li>
@@ -24,6 +25,7 @@
                     <li><strong>Lesson 04: </strong> <a href="#">Link</a> | <a href="#">Link</a></li>
                 </ul>
             </nav>
+                </div>
         <footer>
             <span>
                 &copy;2020 | Laura Sommer | Logan, Utah | <a
