--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="styles.css">
         <title> WDD 230-06 Assignment Portal</title>
         <meta name="description" content="Assignment portal for WDD 230-06"/>
