--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="small.css">
+        <link rel="stylesheet" href="medium.css">
         <title> WDD 230-06 Assignment Portal</title>
         <meta name="description" content="Assignment portal for WDD 230-06"/>
     </head>
