--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -9,27 +9,39 @@
     </head>
     <body>
         <header>
-            <div class="ruleofthirds">
-                <h1>Rule of Thirds</h1>
-                <h2>Organization/Company Name</h2>
-                <link src="">
-                <img src="?" alt="thirds_pic" class="thirdsPic">
-                <p>Rule of Thirds Description...</p>
-            </div>
-            <div class="whitespaceclean">
-                <h1>White Space and Clean Design</h1>
-                <h2>Organization/Company Name</h2>
-                <link src="">
-                <img src="?" alt="white_pic" class="whitePic">
-                <p>White Space and Clean Design Description</p>
-            </div>
-            <div class="hickslaw">
-                <h1>Hicks Law</h1>
-                <h2>Organization/Company Name</h2>
-                <link src="">
-                <img src="?" alt="hicks_pic" class="hicksPic">
-                <p>Hicks Law Description</p>
+            <div>
+                <h1>Design Principles Document</h1>
+                <h2 class="name">Laura Sommer</h2>
             </div>
         </header>
-    </body>
+        <main>
+            <section class="first"><h2>Rule of Thirds</h2><p>(Website Name)</p><a href="webiste link" target="_blank">website name w/ .com</a>
+                <br>
+                <br>
+                <img src="(place image name" alt="description">
+                <p>Give a description of the image...</p>
+            </section>
+            <section class="second"><h2>White Space and Clean Design</h2><p>(Website Name)</p><a href="website link" target="_blank">website name w/ .com</a>
+                <br>
+                <br>
+                <img src="(place image name" alt="description">
+                <p>Give a description of the image...</p>
+            </section>
+            <section class="third"><h2>Hicks Law</h2><p>(Website Name)</p><a href="website link" target="-blank">webiste name w/.com</a>
+                <br>
+                <br>
+                <img scr="place image name" alt="description">
+                <p>Give a description of the image...</p>
+            </section>
+        </main>
+        <footer>
+            <div class="lastInfo">
+                &#169;
+                <span id="year"></span>
+                 | Laura Sommer | Utah | 
+                <a href="https://www.byui.edu/online">BYUI online learning</a>
+                <div id="updated"></div>
+        </div>
+    </footer>
+</body>
 </html>
