--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="2.css">
+        <link rel="stylesheet" href="design.principles.css">
         <title>Design Principles</title>
         <meta name="description" content="Lesson 2 Assignment">
     </head>
