--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -15,23 +15,23 @@
             </div>
         </header>
         <main>
-            <section class="first"><h2>Rule of Thirds</h2><p>(Website Name)</p><a href="webiste link" target="_blank">website name w/ .com</a>
+            <section class="first"><h2>Rule of Thirds</h2><p>(Website Name)</p><a href="whttps://www.vans.com/" target="_blank">vans.com</a>
                 <br>
                 <br>
-                <img src="(place image name" alt="description">
-                <p>Give a description of the image...</p>
+                <img src="images.pics/IMG_4516.jpg" alt="Vans Website Homepage">
+                <p>I thought that the Vans website presented a really neat example of using the Rule of Thirds. The shoe that you see that looks like its moving slowly appears and then disappears. I thought this was a really good example, and they do a really great job at making it look professional and organized.</p>
             </section>
-            <section class="second"><h2>White Space and Clean Design</h2><p>(Website Name)</p><a href="website link" target="_blank">website name w/ .com</a>
+            <section class="second"><h2>White Space and Clean Design</h2><p>Fitbit</p><a href="https://www.fitbit.com/global/us/home" target="_blank">fitbit.com</a>
                 <br>
                 <br>
-                <img src="(place image name" alt="description">
-                <p>Give a description of the image...</p>
+                <img src="images.pics/IMG_4514.jpg" alt="Fitbit Website Homepage">
+                <p>I think that white space is really important in terms of web design because it helps the viewer not feel overwhelmed as they view a webpage. Somtimes if there is too much going on the navigation of a website can be overwhelming, and so white space helps to balance that out. I think Fitbit did a really good job at making there homepage simple but professional. Especially since they want the main focus to be the watch they are trying to sell, and the white space allows for a focal point on the watches.</p>
             </section>
-            <section class="third"><h2>Hicks Law</h2><p>(Website Name)</p><a href="website link" target="-blank">webiste name w/.com</a>
+            <section class="third"><h2>Alignment</h2><p>Amazon</p><a href="https://www.amazon.com/" target="-blank">amazon.com</a>
                 <br>
                 <br>
-                <img scr="place image name" alt="description">
-                <p>Give a description of the image...</p>
+                <img src="images.pics/IMG_4515.jpg" alt="Amazon Website Homepage">
+                <p>I feel like Amazon is changing their homepage all of the time, but this specific time I feel like it is a great example of alignment. I think they also beleive in simplicty, because I think anyone who navigates to this page can simply navigate and get around the website easily. I really liked the alignment I found on their website. The small screenshot doesn't even caption the really great amount of alignment below. I think they did a really good job at using alignment here in showing the different objects that they are trying to highlight.</p>
             </section>
         </main>
         <footer>
