--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -15,7 +15,7 @@
             </div>
         </header>
         <main>
-            <section class="first"><h2>Rule of Thirds</h2><p>(Website Name)</p><a href="whttps://www.vans.com/" target="_blank">vans.com</a>
+            <section class="first"><h2>Rule of Thirds</h2><p>Vans</p><a href="whttps://www.vans.com/" target="_blank">vans.com</a>
                 <br>
                 <br>
                 <img src="images.pics/IMG_4516.jpg" alt="Vans Website Homepage">
