--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="design.principles.css">
+        <link rel="stylesheet" href="normalize.css">
         <title>Design Principles</title>
         <meta name="description" content="Lesson 2 Assignment">
     </head>
