--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Design Principles</title>
         <meta name="description" content="Lesson 2 Assignment">
+        <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="design.principles.css">
     </head>
     <body>
