--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -6,7 +6,7 @@
         <title>Design Principles</title>
         <meta name="description" content="Lesson 2 Assignment">
         <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="design.principles.css">
+        <link rel="stylesheet" href="design-principles.css">
     </head>
     <body>
         <header>
