--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,7 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Right On Weather</title>
-        <meta name="description" content="The purpose of this website is to provide a way for people to accurately view and see what the weather is and will be.">
-        <meta name="description" content="The domain name that I chose for my webiste is rightonweather.com">
+        <meta name="description" content="My Weather Site">
     </head>
+    <body>
+        <header>
+            <h1>Right On Weather Site Plan</h1>
+            <h2>Laura Sommer</h2>
+            <h2>Right On Weather</h2>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Site Purpose</a></li>
+                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="color-scheme.html">Color Scheme</a></li>
+                    <li><a href="typography.html">Typography</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="mainContent">
+            <h2>Site Purpose</h2>
+            <p>Give the purpose of site...</p>
+            <h2>Available Domain</h2>
+            <p>rightonweather.com</p>
+            <img src="images/weatherlogo.png" alt="weatherlogo">
+        </main>
+        <footer>
+            <div>&copy; <span id="year"></span> | Laura Sommer | WDD 230 | Logan, UT | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+        </footer>
+    </body>
 </html>
