--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,6 +28,9 @@
             <img src="images/weatherlogo.png" alt="weatherlogo">
         </main>
         <footer>
+            <span class="dateModified"> Last Updated:
+                <script src="file.js" type="text/javascript"></script>
+            </span>
             <div>&copy; <span id="year"></span> | Laura Sommer | WDD 230 | Logan, UT | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
         </footer>
     </body>
