--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -34,7 +34,7 @@
             </span>
             <br>
             <span class="dateModified"> Last Updated:
-                <script src="file.js" type="text/javascript"></script>
+                <script src="lesson3.js" type="text/javascript"></script>
             </span>
         </footer>
     </body>
