--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -8,6 +8,19 @@
     </head>
     <body>
         <header>
+            <h1>Right On Weather Site Plan</h1>
+            <h2>Laura Sommer</h2>
+            <h2>Right On Weather</h2>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Site Purpose</a></li>
+                    <li><a href="target-audience.html">Target Audience</a></li>
+                    <li><a href="color-scheme.html">Color Scheme</a></li>
+                    <li><a href="typography.html">Typography</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
             <h1>Target Audience</h1>
             <p>Target Audience description here...</p>
             <h2>First Persona</h2>
@@ -16,6 +29,6 @@
             <p>Description of second persona</p>
             <h2>Scenarios</h2>
             <p>List of 5 Scenarios</p>
-        </header>
+        </main>
     </body>
 </html>
