--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="audience">
             <h1>Target Audience</h1>
             <p>Target Audience description here...</p>
             <h2>First Persona</h2>
