--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,14 +28,10 @@
             <img src="images/weatherlogo.png" alt="weatherlogo">
         </main>
         <footer>
-            <span>
-                &copy;2020 | Laura Sommer | Logan, Utah | <a
-                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
-            </span>
-            <br>
-            <span class="dateModified"> Last Updated:
-                <script src="lesson3.js" type="text/javascript"></script>
-            </span>
+            <span id="year"></span>
+                 | Laura Sommer | Logan, Utah | 
+                <a href="https://www.byui.edu/online">BYUI online learning</a>
+                <div id="updated"></div>
         </footer>
     </body>
 </html>
