--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -22,7 +22,10 @@
         </header>
         <main class="color">
             <h1>Color Scheme</h1>
-            
+            <h2>Color Spelt Out and Font in Color</h2>
+            <h2>Color Spelt Out and Font in Color</h2>
+            <h2>Color Spelt Out and Font in Color</h2>
+            <h2>Color Spelt Out and Font in Color</h2>
         </main>
     </body>
 </html>
