--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -28,10 +28,14 @@
             <img src="images/weatherlogo.png" alt="weatherlogo">
         </main>
         <footer>
-            <span id="year"></span>
-                 | Laura Sommer | Logan, Utah | 
-                <a href="https://www.byui.edu/online">BYUI online learning</a>
-                <div id="updated"></div>
+            <span>
+                &copy;2020 | Laura Sommer | Logan, Utah | <a
+                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+            </span>
+            <br>
+            <span class="dateModified"> Last Updated:
+                <script src="file.js" type="text/javascript"></script>
+            </span>
         </footer>
     </body>
 </html>
