--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -27,5 +27,15 @@
             <h2>Color Spelt Out and Font in Color</h2>
             <h2>Color Spelt Out and Font in Color</h2>
         </main>
+        <footer>
+            <span>
+                &copy;2020 | Laura Sommer | Logan, Utah | <a
+                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+            </span>
+            <br>
+            <span class="dateModified"> Last Updated:
+                <script src="file.js" type="text/javascript"></script>
+            </span>
+        </footer>
     </body>
 </html>
