--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -30,5 +30,15 @@
             <h2>Scenarios</h2>
             <p>List of 5 Scenarios</p>
         </main>
+        <footer>
+            <span>
+                &copy;2020 | Laura Sommer | Logan, Utah | <a
+                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+            </span>
+            <br>
+            <span class="dateModified"> Last Updated:
+                <script src="file.js" type="text/javascript"></script>
+            </span>
+        </footer>
     </body>
 </html>
