--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -36,13 +36,14 @@
             </section>
         </main>
         <footer>
-            <div class="lastInfo">
-                &#169;
-                <span id="year"></span>
-                 | Laura Sommer | Utah | 
-                <a href="https://www.byui.edu/online">BYUI online learning</a>
-                <div id="updated"></div>
-        </div>
+            <span>
+                &copy;2020 | Laura Sommer | Logan, Utah | <a
+                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+            </span>
+            <br>
+            <span class="dateModified"> Last Updated:
+                <script src="lessontwo.js" type="text/javascript"></script>
+            </span>
     </footer>
 </body>
 </html>
