--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -37,7 +37,7 @@
             </span>
             <br>
             <span class="dateModified"> Last Updated:
-                <script src="file.js" type="text/javascript"></script>
+                <script src="lessonthree.js" type="text/javascript"></script>
             </span>
         </footer>
     </body>
