--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Target Audience</title>
         <meta name="description" content="Target Audience">
+        <link rel="stylesheet" href="normalize.css">
     </head>
     <body>
         <header>
