--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Typography</title>
         <meta name="description" content="Typography Page">
+        <link rel="stylesheet" href="normalize.css">
     </head>
     <body>
         <header>
