--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Color Scheme</title>
         <meta name="description" content="Color Scheme Page">
+        <link rel="stylesheet" href="normalize.css">
     </head>
     <body>
         <header>
