--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Right On Weather</title>
         <meta name="description" content="My Weather Site">
+        <link rel="stylesheet" href="normalize.css">
     </head>
     <body>
         <header>
