--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -23,13 +23,27 @@
         </header>
         <main class="audience">
             <h1>Target Audience</h1>
-            <p>Target Audience description here...</p>
-            <h2>First Persona</h2>
-            <p>Description of first persona</p>
-            <h2>Second Persona</h2>
-            <p>Description of second persona</p>
-            <h2>Scenarios</h2>
-            <p>List of 5 Scenarios</p>
+            <p>This website is for anyone who needs to know the weather on a daily basis. It is especially helpful to those who enjoy doing outdoor activities, traveling, and for planning different events. </p>
+            <br>
+            <h2>Persona 1</h2>
+            <h3>Persona: Dad (John Barlow)</h3>
+            <p>John Barlow is a 40 year old man married to his wife Jane. They have four children between the ages of 5-12. He works as an electrical engineer and his wife is a stay at home Mom. Some of the families favortite things to do together include spending time camping, traveling, hiking, and enjoying time in the outdoors. Something that is is important to John is spending quality time and making memories with his family.</p>
+            <br>
+            <h3>Scenarios</h3>
+            <ul>
+                <li>John is planning to go on a camping trip for the weekend with his family, but is trying to decide where they should go for good weather.</li>
+                <li>John's wife has been wanting to get some work done in the yard and asked John to help, but the weather the past few days hasn't been good. So, they need to find out when the weather will be better.</li>
+                <li>John and his wife Jane have planned a fun family swim day, and want to make sure the weather is going to be good, so that they can enjoy the day together.</li>
+                <li>John is trying to decided whether or not it will cool off enough at night for him to open his windows to help save some money and not have to use the AC.</li>
+                <li>John and his family want to have some friends over for a BBQ, but he wants to make sure it will be good weather before planning or inviting anyone.</li>
+            </ul>
+            <p></p>
+            <h2>Persona 2</h2>
+            <h3>Persona: High School Student (Sam)</h3>
+            <p>Sam Chavez, 16 is a Junior in high school who is on the high school varsity soccer team. He is the oldest out of his 5 siblings. Other than playing soccer he enjoy spending time with his family and friends, and mountain biking.  </p>
+            <br>
+            <h3>Scenarios</h3>
+            <p></p>
         </main>
         <footer>
             <span>
