--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Right On Weather</title>
+        <title>Right On Weather Site Plan</title>
         <meta name="description" content="My Weather Site">
         <link rel="stylesheet" href="normalize.css">
     </head>
