--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -37,13 +37,20 @@
                 <li>John is trying to decided whether or not it will cool off enough at night for him to open his windows to help save some money and not have to use the AC.</li>
                 <li>John and his family want to have some friends over for a BBQ, but he wants to make sure it will be good weather before planning or inviting anyone.</li>
             </ul>
-            <p></p>
+            <br>
+            <br>
             <h2>Persona 2</h2>
-            <h3>Persona: High School Student (Sam)</h3>
-            <p>Sam Chavez, 16 is a Junior in high school who is on the high school varsity soccer team. He is the oldest out of his 5 siblings. Other than playing soccer he enjoy spending time with his family and friends, and mountain biking.  </p>
+            <h3>Persona: High School Student (Sam Chavez)</h3>
+            <p>Sam Chavez, 16 is a Junior in high school who is on the high school varsity soccer team. He is the oldest out of his 5 siblings. Other than playing soccer he enjoy spending time with his family and friends, and mountain biking. He also loves to spend time and play with his dog, Tucker. </p>
             <br>
             <h3>Scenarios</h3>
-            <p></p>
+            <ul>
+                <li>Sam has soccer practice each day after school. When he is packing his gear for practice he wants to know the weather, to make sure he bring a jacket if it is going to be cold or rainy.</li>
+                <li>When Sam gets home from soccer practice he wants to take his dog Tucker to the park to play fetch if the weather is going to be nice.</li>
+                <li>Sam and his friends are wanting to plan a mountain biking trip together, and want to make sure they wont have any problems with the weather on their trip.</li>
+                <li>Sam has an away soccer game. The high school is over a two hour drive from his, and he wants to make sure that he has the proper clothing and gear so that he is comfortable.</li>
+                <li>Sam is going on a day trip for one of his classes, and wants to know what he should wear for the day. Depending on whether it's hot or cold.</li>
+            </ul>
         </main>
         <footer>
             <span>
