--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -23,10 +23,10 @@
         </header>
         <main class="color">
             <h1>Color Scheme</h1>
-            <h2>Color Spelt Out and Font in Color</h2>
-            <h2>Color Spelt Out and Font in Color</h2>
-            <h2>Color Spelt Out and Font in Color</h2>
-            <h2>Color Spelt Out and Font in Color</h2>
+            <h2>This is the color for my headings from my color scheme.</h2>
+            <p>This is the color for my paragraphs from my color scheme.</p>
+            <br><br>
+            <p>Note: Both of the color of my headings and paragraphs are used as you can see in other parts of my HTML.</p>
         </main>
         <footer>
             <span>
