--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -23,10 +23,12 @@
         </header>
         <main class="color">
             <h1>Color Scheme</h1>
-            <h2>This is the color for my headings from my color scheme.</h2>
-            <p>This is the color for my paragraphs from my color scheme.</p>
-            <br><br>
-            <p>Note: Both of the color of my headings and paragraphs are used as you can see in other parts of my HTML.</p>
+           <p>Palette Url: <a href="https://coolors.co/03045e-0077b6-999999" target="_blank">https://coolors.co/03045e-0077b6-999999</a></p>
+
+           <table class="colors">
+               <tr><th>Primary</th><th>Seconday</th><th>Accent 1</th></tr>
+               <tr><td class="primary">#03045E</td><td class="secondary">#0077B6</td><td class="accent1">#999999</td></tr>
+           </table>
         </main>
         <footer>
             <span>
