--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -25,7 +25,7 @@
             <h1>Color Scheme</h1>
            <p>Palette Url: <a href="https://coolors.co/03045e-0077b6-999999" target="_blank">https://coolors.co/03045e-0077b6-999999</a></p>
 
-           <table class="colors">
+           <table class="scheme">
                <tr><th>Primary</th><th>Seconday</th><th>Accent 1</th></tr>
                <tr><td class="primary">#03045E</td><td class="secondary">#0077B6</td><td class="accent1">#999999</td></tr>
            </table>
