--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -9,9 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Right On Weather Site Plan</h1>
-            <h2>Laura Sommer</h2>
-            <h2>Right On Weather</h2>
+            <h1>Right On Weather</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Site Purpose</a></li>
@@ -23,12 +21,11 @@
         </header>
         <main class="color">
             <h1>Color Scheme</h1>
-           <p>Palette Url: <a href="https://coolors.co/03045e-0077b6-999999" target="_blank">https://coolors.co/03045e-0077b6-999999</a></p>
-
-           <table class="scheme">
-               <tr><th>Primary</th><th>Seconday</th><th>Accent 1</th></tr>
-               <tr><td class="primary">#03045E</td><td class="secondary">#0077B6</td><td class="accent1">#999999</td></tr>
-           </table>
+            <h2>This is the heading text color.</h2>
+            <p>This is the paragraph text color</p>
+            <p>This is the accent color for my page.</p>
+            <br>
+            <p>Note: These colors will be used in other aspects of the HTML page, other than just the text color.</p>
         </main>
         <footer>
             <span>
