--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -6,6 +6,7 @@
         <title>Color Scheme</title>
         <meta name="description" content="Color Scheme Page">
         <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="color.css">
     </head>
     <body>
         <header>
