--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,6 +6,7 @@
         <title>Right On Weather Site Plan</title>
         <meta name="description" content="My Weather Site">
         <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <header>
