--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -6,6 +6,7 @@
         <title>Typography</title>
         <meta name="description" content="Typography Page">
         <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="typography.css">
     </head>
     <body>
         <header>
