--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -6,6 +6,7 @@
         <title>Target Audience</title>
         <meta name="description" content="Target Audience">
         <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="target.css">
     </head>
     <body>
         <header>
