--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -24,9 +24,8 @@
             <h1>Color Scheme</h1>
             <h2>This is the heading text color.</h2>
             <p>This is the paragraph text color</p>
-            <p>This is the accent color for my page.</p>
             <br>
-            <p>Note: These colors will be used in other aspects of the HTML page, other than just the text color.</p>
+            <p>Note: These colors will be used in other aspects of the HTML page, other than just the text color. There is also my accent color that is shown in the main section.</p>
         </main>
         <footer>
             <span>
