--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Right On Weather Site Plan</h1>
+            <h1>Right On Weather: Site Plan</h1>
             <h2>Laura Sommer</h2>
             <h2>Right On Weather</h2>
             <nav>
