--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="color">
+        <main>
             <h1>Color Scheme</h1>
             <h2>This is the heading text color.</h2>
             <p>This is the paragraph text color</p>
