--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="audience">
+        <main>
             <h1>Target Audience</h1>
             <p>This website is for anyone who needs to know the weather on a daily basis. It is especially helpful to those who enjoy doing outdoor activities, traveling, and for planning different events. </p>
             <br>
