--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -22,8 +22,9 @@
                 </ul>
             </nav>
         </header>
-        <main class="typography">
-
+        <main>
+            <h1>This is the header font.</h1>
+            <p>This is the paragraph font.</p>
         </main>
         <footer>
             <span>
