--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="mainContent">
+        <main>
             <h2>Site Purpose</h2>
             <p>The purpose of this website it to give people a reliable place to be able to see what the weather is going to be like for the day, for the week, see what the high and low temperatures will be, and track any storms that may be in their area. This website will help people to be able to plan better according to the weather that they are able to rely on, and help them to be able to use there time better as they know the weather and won't plan something or do something where the weather wouldn't make it possible. </p>
             <h2>Available Domain</h2>
