--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -15,32 +15,14 @@
                 <h1>Laura Sommer</h1>
                 </div>
         </header>
-        <div class="lessonList">
-            <ul>
-                <li>
-                    Lesson 02:
-                    <a href="lesson2/design-principles.html">Assignment Link</a>
-                </li>
-                <li>
-                    Lesson 03:
-                    <a href="lesson3/index.html">Assignment Link:</a>
-                </li>
-                <li>
-                    Lesson 04:
-                    <a href="#">Link</a>
-                     | 
-                    <a href="#">Link</a>
-                </li>
-            </ul>
-        </div>
         <main>
                 <h2>WDD 230-06: Assignment Portal</h2>
                 <hr>
                 <div>
                 <nav class="lessons">
                 <ul>
-                    <li><strong>Lesson 02: </strong> <a href="#">Assignment Link</a></li>
-                    <li><strong>Lesson 03: </strong> <a href="#">Assignment Link</a></li>
+                    <li><strong>Lesson 02: </strong> <a href="lesson2/design-principles.html">Assignment Link</a></li>
+                    <li><strong>Lesson 03: </strong> <a href="lesson3/index.html">Assignment Link</a></li>
                     <li><strong>Lesson 04: </strong> <a href="#">Link</a> | <a href="#">Link</a></li>
                 </ul>
             </nav>
