--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -21,8 +21,8 @@
             </nav>
         </header>
         <main>
-            <h1>This is the header font.</h1>
-            <p>This is the paragraph font.</p>
+            <h1>This is the header font. The font name is Sansita Swashed, and I chose it because it really like how to really stands out in comparison to the paragraph font.</h1>
+            <p>This is the paragraph font. The font name is PT Sans, and I chose this font because I feel like it is a nice combination with the header font. It also isn't overpowering, which helps the headers to continue to stand out. </p>
         </main>
         <footer>
             <span>
