--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -30,14 +30,14 @@
             <p>Note: These colors will be used in other aspects of the HTML page, other than just the text color. There is also my accent color that is shown in the main section.</p>
         </main>
         <footer>
-            <span>
-                &copy;2020 | Laura Sommer | Logan, Utah | <a
-                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
-            </span>
-            <br>
-            <span class="dateModified"> Last Updated:
-                <script src="lessonthree.js" type="text/javascript"></script>
-            </span>
-        </footer>
+            <footer>
+                <span>
+                    &copy; <span id="year"></span> | Laura Sommer | Logan, Utah | <a
+                        href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+                </span>
+                <br>
+                <span id="lastupdated"></span>
+            </footer>
+            <script src="file.js"></script>
     </body>
 </html>
