--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -26,13 +26,12 @@
         </main>
         <footer>
             <span>
-                &copy;2020 | Laura Sommer | Logan, Utah | <a
+                &copy; <span id="year"></span> | Laura Sommer | Logan, Utah | <a
                     href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
             </span>
             <br>
-            <span class="dateModified"> Last Updated:
-                <script src="lessonthree.js" type="text/javascript"></script>
-            </span>
+            <span id="lastupdated"></span>
         </footer>
+        <script src="file.js"></script>
     </body>
 </html>
