--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Right On Weather Site Plan</title>
         <meta name="description" content="My Weather Site">
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <header>
