--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Target Audience</title>
         <meta name="description" content="Target Audience">
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="target.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/target.css">
     </head>
     <body>
         <header>
