--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Typography</title>
         <meta name="description" content="Typography Page">
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="typography.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/typography.css">
     </head>
     <body>
         <header>
