--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Color Scheme</title>
         <meta name="description" content="Color Scheme Page">
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="color.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/color.css">
     </head>
     <body>
         <header>
