--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -38,6 +38,6 @@
             <br>
             <span id="lastupdated"></span>
         </footer>
-        <script src="file.js"></script>
+        <script src="js/file.js"></script>
     </body>
 </html>
