--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -37,6 +37,6 @@
                 <br>
                 <span id="lastupdated"></span>
             </footer>
-            <script src="file.js"></script>
+            <script src="js/file.js"></script>
     </body>
 </html>
