--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -31,9 +31,9 @@
             <h3>Scenarios</h3>
             <ul>
                 <li>John is planning to go on a camping trip for the weekend with his family, but is trying to decide where they should go for good weather.</li>
-                <li>John's wife has been wanting to get some work done in the yard and asked John to help, but the weather the past few days hasn't been good. So, they need to find out when the weather will be better.</li>
+                <li>John loves to watch football, but none of kids play. He wants to find out when the highschool football for the weekend is.</li>
                 <li>John and his wife Jane have planned a fun family swim day, and want to make sure the weather is going to be good, so that they can enjoy the day together.</li>
-                <li>John is trying to decided whether or not it will cool off enough at night for him to open his windows to help save some money and not have to use the AC.</li>
+                <li>John's family loves the Fall time around Halloween, and he wants to know what kind of Halloween events are happening that they could attend together.</li>
                 <li>John and his family want to have some friends over for a BBQ, but he wants to make sure it will be good weather before planning or inviting anyone.</li>
             </ul>
             <br>
@@ -46,8 +46,8 @@
             <ul>
                 <li>Sam has soccer practice each day after school. When he is packing his gear for practice he wants to know the weather, to make sure he bring a jacket if it is going to be cold or rainy.</li>
                 <li>When Sam gets home from soccer practice he wants to take his dog Tucker to the park to play fetch if the weather is going to be nice.</li>
-                <li>Sam and his friends are wanting to plan a mountain biking trip together, and want to make sure they wont have any problems with the weather on their trip.</li>
-                <li>Sam has an away soccer game. The high school is over a two hour drive from his, and he wants to make sure that he has the proper clothing and gear so that he is comfortable.</li>
+                <li>Sam and his friends are wanting to get together and do something fun over the weekend. They want to see if there is anything happening in the community that would be fun to attend.</li>
+                <li>Sam has an home soccer game. He wants to make sure that it has been announcement in the community. This way they can have more support at their games.</li>
                 <li>Sam is going on a day trip for one of his classes, and wants to know what he should wear for the day. Depending on whether it's hot or cold.</li>
             </ul>
         </main>
