--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -31,7 +31,7 @@
             <h3>Scenarios</h3>
             <ul>
                 <li>John is planning to go on a camping trip for the weekend with his family, but is trying to decide where they should go for good weather.</li>
-                <li>John loves to watch football, but none of kids play. He wants to find out when the highschool football for the weekend is.</li>
+                <li>John loves to watch football, but none of kids play. He wants to find out when the highschool football game is for the weekend is.</li>
                 <li>John and his wife Jane have planned a fun family swim day, and want to make sure the weather is going to be good, so that they can enjoy the day together.</li>
                 <li>John's family loves the Fall time around Halloween, and he wants to know what kind of Halloween events are happening that they could attend together.</li>
                 <li>John and his family want to have some friends over for a BBQ, but he wants to make sure it will be good weather before planning or inviting anyone.</li>
