--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -6,7 +6,7 @@
         <title>Preston Town Page</title>
         <meta name="description" content="My Weather Site">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/preston.css">
     </head>
     <body>
         <header>
