--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -14,7 +14,7 @@
             <img src="images/weatherlogo.png" alt="weather logo"/>
             </div>
             <h1>Right On Weather</h1>
-            <p>Where it's always "Right On"</p>
+            <p><strong>Where it's always "Right On"</strong></p>
             <nav>
                 <ul class="navigation">
                     <li><a class="menu" href="#">Menu</a></li>
@@ -41,6 +41,7 @@
             </span>
             <br>
             <span id="lastupdated"></span>
+            <br>
              <div class="social">
               <a href="https://www.facebook.com/" target="_blank"><img src="https://cdn.glitch.com/8f8d0525-162d-42b7-945e-da0caec38f0f%2Ffacebook%20logo.png?v=1580410627161" alt="facebook logo"></a>
               <a href="https://www.youtube.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.12%20AM.png?v=1580233068298" alt="Youtube icon"></a>
