--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -14,7 +14,7 @@
             <img src="images/weatherlogo.png" alt="weather logo"/>
             </div>
             <h1>Right On Weather</h1>
-            <strong><p>Where it's always "Right On"</p></strong>
+            <h2>Where it's always "Right On"</h2>
             <nav>
                 <ul class="navigation">
                     <li><a class="menu" href="#">Menu</a></li>
