--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -27,15 +27,10 @@
         </header>
         <main>
             <h2>Preston, Idaho</h2>
-            <div class="vertical-menu">
-                <a href="#">Hero w/ weather summary</a>
-                <br>
-                <a href="#">5 Day Forecast</a>
-                <br>
-                <a href="#">Article</a>
-                <br>
-                <a href="#">Contact Information</a>
-              </div>
+            <div class="content-box">Hero w/ weather summary</div>
+            <div class="content-box">5 Day Forecast</div>
+            <div class="content-box">Article</div>
+            <div class="content-box">Contact Information</div>
         </main>
         <footer>
             <span>
