--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -6,7 +6,9 @@
         <title>Preston Town Page</title>
         <meta name="description" content="My Weather Site">
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/preston.css">
+        <link rel="stylesheet" href="css/small.css">
+        <link rel="stylesheet" href="css/medium.css">
+        <link rel="stylesheet" href="css/large.css">
     </head>
     <body>
         <header>
@@ -18,10 +20,11 @@
             <nav>
                 <ul class="navigation">
                     <li><a class="menu" href="#">Menu</a></li>
-                    <li><a href="index.html">Site Purpose</a></li>
-                    <li><a href="target-audience.html">Target Audience</a></li>
-                    <li><a href="color-scheme.html">Color Scheme</a></li>
-                    <li><a href="typography.html">Typography</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Soda Springs</a></li>
+                    <li><a href="#">Fish Haven</a></li>
+                    <li><a href="#">Storm Center</a></li>
+                    <li><a href="#">Gallery</a></li>
                 </ul>
             </nav>
         </header>
