--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -13,10 +13,10 @@
     <body>
         <header>
             <div class="logo"></div>
-            <img src="images/weatherlogo.png" alt="weather logo"/>
+            <img src="images/weatherlogoresize.png" alt="weather logo"/>
             </div>
             <h1>Right On Weather</h1>
-            <h2>Where it's always "Right On"</h2>
+            <div class="moto">Where it's always "Right On"</div>
             <nav>
                 <ul class="navigation">
                     <li><a class="menu" href="#">Menu</a></li>
