--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -12,22 +12,26 @@
     </head>
     <body>
         <header>
-            <div class="logo"></div>
-            <img src="images/weatherlogoresize.png" alt="weather logo"/>
-            </div>
+            <picture>
+            <img src="images/weatherlogoresize.png" alt="weather logo">
+            </picture>
+            <section class="heading">
             <h1>Right On Weather</h1>
             <div class="moto">Where it's always "Right On"</div>
-            <nav>
-                <ul class="navigation">
+        </section>
+        </header>
+            <nav class="clearfix">
+                <button onclick="toggleMenu()">&#9776; Menu</button>
+                <ul id="mainNav" class="hide">
                     <li><a class="menu" href="#">Menu</a></li>
                     <li><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
                     <li><a href="#">Storm Center</a></li>
                     <li><a href="#">Gallery</a></li>
                 </ul>
             </nav>
-        </header>
         <main>
             <h2>Preston, Idaho</h2>
             <div class="content-box">Hero w/ weather summary</div>
@@ -36,19 +40,10 @@
             <div class="content-box">Contact Information</div>
         </main>
         <footer>
-            <span>
-                &copy; <span id="year"></span> | Laura Sommer | Logan, Utah | <a
-                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
-            </span>
-            <br>
-            <span id="lastupdated"></span>
-            <br>
-             <div class="social">
-              <a href="https://www.facebook.com/" target="_blank"><img src="https://cdn.glitch.com/8f8d0525-162d-42b7-945e-da0caec38f0f%2Ffacebook%20logo.png?v=1580410627161" alt="facebook logo"></a>
-              <a href="https://www.youtube.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.12%20AM.png?v=1580233068298" alt="Youtube icon"></a>
-              <a href="https://www.twitter.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.21%20AM.png?v=1580233060662" alt="Twitter icon"></a>
-             </div>
+            <div class="lastInfo">
+                &169; Right On Weather | Attributions | Laura Sommer
+                <div id="updated">
+                </div>
         </footer>
-        <script src="js/file.js"></script>
     </body>
 </html>
