--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -41,7 +41,7 @@
         </main>
         <footer>
             <div class="lastInfo">
-                &169; Right On Weather | Attributions | Laura Sommer
+                &169; Right On Weather | Attributions | <br class='responsive'> Laura Sommer
                 <div id="updated">
                 </div>
         </footer>
