--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -34,10 +34,10 @@
             </nav>
         <main>
             <h2>Preston, Idaho</h2>
-            <div class="content-box">Hero w/ weather summary</div>
-            <div class="content-box">5 Day Forecast</div>
-            <div class="content-box">Article</div>
-            <div class="content-box">Contact Information</div>
+            <div class="content">Hero w/ weather summary</div>
+            <div class="content">5 Day Forecast</div>
+            <div class="content">Article</div>
+            <div class="content">Contact Information</div>
         </main>
         <footer>
             <div class="lastInfo">
