--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
+        <script src="js/lesson4.js"></script>
     </head>
     <body>
         <header>
