--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -44,6 +44,6 @@
                 <div id="updated">
                 </div>
         </footer>
-        <script src="js/lesson4.js"></script>
+        <script src="js/file.js"></script>
     </body>
 </html>
