--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -39,7 +39,7 @@
             <div class="content">Contact Information</div>
         </main>
         <footer>
-            <div class="lastInfo">
+            <div class="lastInfo"></div>
                 &#169; Right On Weather | Attributions | <br class='responsive'> Laura Sommer
                 <div id="updated">
                 </div>
