--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -34,7 +34,17 @@
             </nav>
         <main>
             <h2>Preston, Idaho</h2>
-            <div class="content">Hero w/ weather summary</div>
+            <div class="hero-ph">Image Placeholder</div>
+            <div class="herodiv">
+            <section class="weathersummary">
+                <h3>Weather Summary</h3>
+                <p>Currently:</p>
+                <p>High:</p>
+                <p>Wind Chill</p>
+                <p>Humidity</p>
+                <p>Wind Speed</p>
+            </section>
+            </div>
             <div class="content">5 Day Forecast</div>
             <div class="content">Article</div>
             <div class="content">Contact Information</div>
