--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -34,7 +34,7 @@
             </nav>
         <main>
             <h2>Preston, Idaho</h2>
-            <div class="hero-ph">Image Placeholder</div>
+            <div class="hero-ph"><img src="images/hero.jpg" alt="hero pic"></div>
             <div class="herodiv">
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
