--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -34,8 +34,9 @@
             </nav>
         <main>
             <h2>Preston, Idaho</h2>
-            <div class="hero-ph"><img src="images/hero.jpg" alt="hero pic"></div>
+            <div class="hero-ph"></div>
             <div class="herodiv">
+                <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently:</p>
