--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -41,9 +41,9 @@
                 <h3>Weather Summary</h3>
                 <p>Currently:</p>
                 <p>High:</p>
-                <p>Wind Chill</p>
-                <p>Humidity</p>
-                <p>Wind Speed</p>
+                <p>Wind Chill:</p>
+                <p>Humidity:</p>
+                <p>Wind Speed:</p>
             </section>
             </div>
             <div class="content">5 Day Forecast</div>
