--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -46,7 +46,21 @@
                 <p>Wind Speed:</p>
             </section>
             </div>
-            <div class="content">5 Day Forecast</div>
+            <div class="forecast-div"></div>
+            <div class="forecast">
+                <table>
+                    <thead>
+                    <tr>Monday</tr>
+                    <tr>Tuesday</tr>
+                    <tr>Wednesday</tr>
+                    <tr>Thursday</tr>
+                    <tr>Friday</tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
+            </div>
             <div class="content">Article</div>
             <div class="content">Contact Information</div>
         </main>
@@ -57,5 +71,6 @@
                 </div>
         </footer>
         <script src="js/file.js"></script>
+        <script src="js/getcurrentdate.js"></script>
     </body>
 </html>
