--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -57,7 +57,13 @@
                     <tr>Friday</tr>
                     </thead>
                     <tbody>
-                        
+                        <tr>
+                            <td>64&deg;</td>
+                            <td>60&deg;</td>
+                            <td>58&deg;</td>
+                            <td>61&deg;</td>
+                            <td>59&deg;</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
