--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -62,7 +62,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>64&deg;</td>
+                            <td>64&deg;<img src="images/sun.png" alt= "sun"></td>
                             <td>60&deg;</td>
                             <td>58&deg;</td>
                             <td>61&deg;</td>
