--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -48,7 +48,7 @@
             </div>
             <div class="forecast-div"></div>
             <div class="forecast">
-                <table>
+                <table class="forecast-table">
                     <thead>
                     <tr>Monday </tr>
                     <tr>Tuesday </tr>
