--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -57,8 +57,9 @@
                     <tr>Friday</tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>64&deg;<img src="images/sun.png" alt= "sun" class="weather-image"></td>
+                        tr>
+                            <td>64&deg;</td>
+                            <tr><img src="images/sun.png" alt= "sun" class="weather-image"></tr>
                             <td>60&deg;</td>
                             <td>58&deg;</td>
                             <td>61&deg;</td>
